# qodeedit

./: .gitmodules  CMakeLists.txt  QodeEditConfig.h.in  QodeEditExampleConfig.h.in
example/: CMakeLists.txt  UIMain.cpp  main.cpp
src/: QodeEdit.h
